export const snapshot = {};

snapshot[`global > GET /auth/register > snapshots > should render register page 1`] = `
'
<body>
  <nav class="navbar navbar-expand-lg bg-body-tertiary">
    <div class="container">
      <a
        class="navbar-brand"
        href="/auth/login"
      >
        Music Follower
      </a>
      <button
        class="navbar-toggler"
        type="button"
        data-bs-toggle="collapse"
        data-bs-target="#navbarSupportedContent"
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
      >
        <span class="navbar-toggler-icon">
        </span>
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
          <li class="nav-item">
            <a
              class="nav-link "
              href="/auth/login"
            >
              Login
            </a>
          </li>
          <li class="nav-item">
            <a
              class="nav-link active"
              href="/auth/register"
            >
              Register
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <main>
    <div class="container mt-5">
      <div class="row">
        <div class="col-sm-8 offset-sm-2">
          <h1 class="text-center">
            Register
          </h1>
          <form
            action="/auth/register"
            method="post"
          >
            <div class="mb-3">
              <label
                for="username"
                class="form-label"
              >
                Username
              </label>
              <input
                name="username"
                id="username"
                class="form-control "
                required
              >
            </div>
            <div class="mb-3">
              <label
                for="password"
                class="form-label"
              >
                Password
              </label>
              <input
                name="password"
                id="password"
                class="form-control "
                required
                type="password"
              >
            </div>
            <div class="d-grid">
              <input
                type="submit"
                value="Register"
                class="btn btn-outline-primary"
              >
            </div>
          </form>
        </div>
      </div>
    </div>
  </main>
  <script
    type="module"
    src="/deps/bootstrap/dist/js/bootstrap.bundle.js"
  >
  </script>
</body>
'
`;

snapshot[`global > GET /auth/register > snapshots > should render register page with form errors 1`] = `
'
<body>
  <nav class="navbar navbar-expand-lg bg-body-tertiary">
    <div class="container">
      <a
        class="navbar-brand"
        href="/auth/login"
      >
        Music Follower
      </a>
      <button
        class="navbar-toggler"
        type="button"
        data-bs-toggle="collapse"
        data-bs-target="#navbarSupportedContent"
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
      >
        <span class="navbar-toggler-icon">
        </span>
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
          <li class="nav-item">
            <a
              class="nav-link "
              href="/auth/login"
            >
              Login
            </a>
          </li>
          <li class="nav-item">
            <a
              class="nav-link active"
              href="/auth/register"
            >
              Register
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <div
    id="flash-messages"
    class="position-fixed z-3 vstack gap-2 overflow-x-hidden overflow-y-scroll"
    style="bottom:1.3rem;right:1.3rem;width:600px;top:1.3rem;pointer-events:none"
  >
    <div
      class="alert alert-danger alert-dismissible fade show mb-0 d-flex align-items-center"
      role="alert"
      style="pointer-events:all"
    >
      <i class="bi bi-x-circle me-2">
      </i>
      Validation failure
      <button
        type="button"
        class="btn-close"
        data-bs-dismiss="alert"
        aria-label="Close"
      >
      </button>
    </div>
  </div>
  <main>
    <div class="container mt-5">
      <div class="row">
        <div class="col-sm-8 offset-sm-2">
          <h1 class="text-center">
            Register
          </h1>
          <form
            action="/auth/register"
            method="post"
          >
            <div class="mb-3">
              <label
                for="username"
                class="form-label"
              >
                Username
              </label>
              <input
                name="username"
                id="username"
                class="form-control is-invalid"
                required
                aria-describedby="username-validation-feedback"
              >
              <div
                id="username-validation-feedback"
                class="invalid-feedback"
              >
                <p key="0">
                  The username field must be defined
                </p>
              </div>
            </div>
            <div class="mb-3">
              <label
                for="password"
                class="form-label"
              >
                Password
              </label>
              <input
                name="password"
                id="password"
                class="form-control is-invalid"
                required
                type="password"
                aria-describedby="password-validation-feedback"
              >
              <div
                id="password-validation-feedback"
                class="invalid-feedback"
              >
                <p key="0">
                  The password field must be defined
                </p>
              </div>
            </div>
            <div class="d-grid">
              <input
                type="submit"
                value="Register"
                class="btn btn-outline-primary"
              >
            </div>
          </form>
        </div>
      </div>
    </div>
  </main>
  <script
    type="module"
    src="/deps/bootstrap/dist/js/bootstrap.bundle.js"
  >
  </script>
</body>
'
`;
